--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,66 @@
+amqp==1.4.7
+anyjson==0.3.3
+appnope==0.1.0
+backports-abc==0.4
+backports.ssl-match-hostname==3.4.0.2
+billiard==3.3.0.21
 blinker==1.4
+celery==3.1.19
+certifi==2015.11.20
+decorator==4.0.4
+dominate==2.1.16
 Flask==0.10.1
+Flask-Admin==1.3.0
+Flask-Bootstrap==3.3.5.7
+Flask-Bower==1.2.1
 Flask-Login==0.2.11
 Flask-Mail==0.9.1
 Flask-Principal==0.4.0
 Flask-Security==1.7.4
 Flask-SQLAlchemy==2.1
+Flask-Uploads==0.1.3
 Flask-WTF==0.12
+functools32==3.2.3.post2
+gnureadline==6.3.3
+infinity==1.3
+intervals==0.3.1
+ipykernel==4.1.1
+ipython==4.0.0
+ipython-genutils==0.1.0
 itsdangerous==0.24
 Jinja2==2.8
+jsonschema==2.5.1
+jupyter-client==4.1.1
+jupyter-core==4.0.6
+kombu==3.0.29
 MarkupSafe==0.23
+mistune==0.7.1
+nbconvert==4.1.0
+nbformat==4.0.1
+nbgrader==0.2.2
+notebook==4.0.6
 passlib==1.6.5
+path.py==8.1.2
+pexpect==4.0.1
+pickleshare==0.5
+ptyprocess==0.5
+Pygments==2.0.2
+python-dateutil==2.4.2
+pytz==2015.7
+pyzmq==15.0.0
+redis==2.10.5
+requests==2.8.1
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
+six==1.10.0
 SQLAlchemy==1.0.9
+SQLAlchemy-Utils==0.31.3
+terminado==0.5
+tornado==4.3
+traitlets==4.0.0
+validators==0.9
+visitor==0.1.2
 Werkzeug==0.10.4
 wheel==0.24.0
 WTForms==2.0.2
+WTForms-Components==0.9.8
